--- a/style.css
+++ b/style.css
@@ -1,92 +1,70 @@
 @import url('https:fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Raleway&display=swap');
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-    
-}
-
-body{background-color: white;}
-h2{text-align: center;
-    color:white;
-    margin: 15px;
-    font-size: 130%;
-    text-transform: uppercase;
-font-family: "Raleway", sans-serif;}
-p{ font-family: Verdana, Tahoma, sans-serif;
-    color: rgb(0, 0, 0);
-    font-weight: 400;
-}
-form{
-    text-align: center;
-    color: white;
     font-family: "Raleway", sans-serif;
-}
-button{
-    border:0px;
-    border-radius: 5px;
-    width: 30%;
-    color:white;
-    margin-top: 20px;
-    font-weight: 400;
-    font-size: 20px;
-    padding: 15px 0;
-}
-tbody{font-weight: 400;
-    font-size: 100%;
-    font-family: Verdana, Tahoma, sans-serif;
-    color:white;
-    border: 100% solid rgb(87, 80, 80);
-    border-radius: 5px;
+    background-color: black;
     
 }
-td{
-    padding-left: 600px ;
-    padding-right: 400px;
-    font-size: 120%;
+.main-header{
+    height: 100vh;
 }
-input{
-    border: 3px solid rgb(211, 201, 201);
-    border-radius:5px;
-    width: 20%;
-    margin-top: 20px;
-    font-weight: 200;
-    padding: 15px 10px;
-    background-color: rgb(115, 11, 11);
-    font-size: 110%;
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000000;
+    padding: 0px 10px 10px;
+    height: 100px;
+    border-bottom: 1px solid #e3e3e3;
+    position: sticky;
+    top: 0;
 }
-hr{
-    margin: 10px;
+nav img{
+    width: 60px;
 }
-.main-form{
-    padding: 10px 0px;
-    width: 100%;
-    height: auto;
-    background-color: rgba(115, 11, 11);
-
+.links{
+    display: flex;
+    justify-content:right;
 }
-#gender{
-    padding:15px 200px 0px 0px;
-    color: white;
-    font-size: 110%;
+.links a{
+    text-decoration: none;
+    color: rgb(250, 250, 250);
 }
-#info{
-    padding: 15px 500px;
-    color: white;
-    text-transform: uppercase;
-    font-size: large;
-
+li{
+    padding: 25px;
+    list-style: none;
+    font-size: 25px;
 }
-#submit-button{
-    background-color: black;
-    color: white;
-    border: black;
+.main-header header{
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-#file{
-    color: white;
-    padding-top: 15px;
-    font-size:120%;
+.div1{
+height: 100vh;
+width: 100%;
+border: 5px solid grey;
 }
-#gendertype{
-    padding-right: 500px
+.mybox{
+    width: 60%;
+    height: 80px;
+    border: 1.5px groove black;
+    outline: 5px dashed wheat;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+/* .myBox > p{
+    background-image: url();
+} */
+.home-page{
+    display: flex;
+    /* background-color: rgb(224, 219, 196); */
+    /* width: 100%; */
+    font-size: 40px;
+    color: #e3e3e3;
+    
 }
